# kaggle2023

./: .gitignore  .gitmodules  CMakeLists.txt  puzzles.csv  submission.csv
scripts/: create_build_dir.sh  stats.sh
src/: globe.hpp  globe_solve.hpp  header.cpp  header.hpp  kociemba_phase1.cpp  kociemba_phase1.hpp  kociemba_phase2.cpp  kociemba_phase2.hpp  main.cpp  merge.cpp  optimal_333.cpp  optimal_333.hpp  puzzle_info.cpp  puzzle_info.hpp  rubik.cpp  rubik.hpp  rubik_222.cpp  rubik_222.hpp  rubik_444_phase1.cpp  rubik_444_phase1.hpp  rubik_444_phase2.cpp  rubik_444_phase2.hpp  rubik_444_phase3.cpp  rubik_444_phase3.hpp  rubik_555_phase1.cpp  rubik_555_phase1.hpp  rubik_555_phase2.cpp  rubik_555_phase2.hpp  rubik_555_phase3.cpp  rubik_555_phase3.hpp  rubik_555_phase4.cpp  rubik_555_phase4.hpp  rubik_555_phase5.cpp  rubik_555_phase5.hpp  rubik_back_table.hpp  rubik_cycles.cpp  rubik_cycles.hpp  rubik_init.cpp  rubik_init.hpp  rubik_move_table.hpp  (+13 more)
